Added more exercise

--- a/Numpy_100exercises.ipynb
+++ b/Numpy_100exercises.ipynb
@@ -2481,6 +2481,130 @@
     "print(\"Our random array is: \\n\", x)\n",
     "print((~x.any(axis=0)).any())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7bc3ca77",
+   "metadata": {},
+   "source": [
+    "# 52. How to swap two rows of an array? "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "ae31533f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array before Swapping : \n",
+      " [[ 0  1  2  3  4]\n",
+      " [ 5  6  7  8  9]\n",
+      " [10 11 12 13 14]\n",
+      " [15 16 17 18 19]\n",
+      " [20 21 22 23 24]]\n",
+      "\n",
+      "Array after Swapping : \n",
+      " [[ 5  6  7  8  9]\n",
+      " [ 0  1  2  3  4]\n",
+      " [10 11 12 13 14]\n",
+      " [15 16 17 18 19]\n",
+      " [20 21 22 23 24]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "#creating array\n",
+    "A = np.arange(25).reshape(5,5)\n",
+    "print(\"Array before Swapping : \\n\", A)\n",
+    "#swapping rows of array\n",
+    "A[[0,1]] = A[[1,0]]\n",
+    "print(\"\\nArray after Swapping : \\n\",A)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b2ea70a8",
+   "metadata": {},
+   "source": [
+    "# 53. How to negate a boolean, or to change the sign of a float inplace?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dfdd3e7f",
+   "metadata": {},
+   "source": [
+    "- numpy.logical_not - This is a logical function that computes the truth value of NOT arr element-wise."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "0a412662",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 1 1 1 0 1 0 0 0 0 0 0 1 1 0 1 0 1 0 1 0 0 0 0 0 1 0 1 1 0 1 0 0 0 0 1\n",
+      " 0 0 0 1 1 1 1 0 0 1 1 0 0 1 0 0 0 1 0 0 1 1 0 0 0 0 0 0 0 1 1 0 1 0 1 1 0\n",
+      " 0 1 0 1 1 1 1 0 0 0 1 0 1 1 0 1 1 1 1 1 0 1 1 1 0 0]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([-0.90397359,  0.89200601,  0.27137107,  0.60232518, -0.42836777,\n",
+       "       -0.68636286, -0.47800234, -0.80331421, -0.79542891, -0.53396469,\n",
+       "       -0.58698585,  0.29116945,  0.98402946,  0.78882422,  0.71573466,\n",
+       "       -0.26626177,  0.3793385 ,  0.05629665, -0.80053068,  0.13312727,\n",
+       "       -0.664545  ,  0.00354142,  0.3388526 ,  0.96852138, -0.33664854,\n",
+       "       -0.75670972, -0.24400061, -0.33317603, -0.19713686, -0.4006502 ,\n",
+       "       -0.74577893, -0.77604023,  0.10846352, -0.54621725,  0.46227577,\n",
+       "        0.24997141,  0.44519814,  0.70154554,  0.74482622, -0.84771314,\n",
+       "        0.53338919, -0.05990865, -0.09485485, -0.53646112,  0.18727735,\n",
+       "        0.9941142 ,  0.79940663,  0.82023997, -0.26760174, -0.70212874,\n",
+       "        0.24177161,  0.39703712, -0.77936476,  0.40068073,  0.60136967,\n",
+       "       -0.54252612,  0.7343823 , -0.52762797,  0.32639623,  0.44787823,\n",
+       "        0.4222062 , -0.29475568,  0.54409967, -0.33853654,  0.18427074,\n",
+       "        0.91092683,  0.41476129,  0.34308116,  0.93388287,  0.1633381 ,\n",
+       "       -0.28833825, -0.36278968, -0.85067468, -0.5964733 , -0.21999034,\n",
+       "       -0.57925174, -0.17372655, -0.1984985 ,  0.85064338, -0.41073395,\n",
+       "       -0.02280419, -0.49099917,  0.35734361, -0.77445103,  0.14825155,\n",
+       "       -0.13076053, -0.61122583, -0.60284145, -0.22263088, -0.60476228,\n",
+       "        0.62379558,  0.35509156, -0.4535427 ,  0.8383726 ,  0.07631088,\n",
+       "        0.63220321, -0.60443643, -0.02523168, -0.50215597, -0.46279265])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "X = np.random.randint(0,2,100)\n",
+    "#performing boolean\n",
+    "np.logical_not(X, out=X)\n",
+    "print(X)\n",
+    "X = np.random.uniform(-1.0,1.0,100)\n",
+    "#Change the sign of a float\n",
+    "np.negative(X, out=X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6bfaafa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
