Added more exercises

--- a/Numpy_100exercises.ipynb
+++ b/Numpy_100exercises.ipynb
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "1f703bdd",
    "metadata": {},
    "outputs": [
@@ -136,12 +136,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "0c7cf318",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Size of array is :  10\n"
+     ]
+    }
+   ],
    "source": [
-    "arr size"
+    "#importing module\n",
+    "import numpy as np\n",
+    "\n",
+    "#Create null vectors \n",
+    "X = np.zeros(10)\n",
+    "\n",
+    "#getting size of array\n",
+    "print(\"Size of array is : \", X.size)"
    ]
   },
   {
@@ -2599,12 +2614,484 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0364968b",
+   "metadata": {},
+   "source": [
+    "# 54. Create a structured array representing a position (x,y) and a color (r,g,b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "62588cba",
+   "metadata": {},
+   "source": [
+    "- Numpy’s Structured Array is similar to Struct in C. It is used for grouping data of different types and sizes.\n",
+    "- All structs in array have same number of fields.\n",
+    "- All structs have same fields names."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "570a0d3c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[((0., 0.), (0., 0., 0.)) ((0., 0.), (0., 0., 0.))\n",
+      " ((0., 0.), (0., 0., 0.)) ((0., 0.), (0., 0., 0.))\n",
+      " ((0., 0.), (0., 0., 0.)) ((0., 0.), (0., 0., 0.))\n",
+      " ((0., 0.), (0., 0., 0.)) ((0., 0.), (0., 0., 0.))\n",
+      " ((0., 0.), (0., 0., 0.)) ((0., 0.), (0., 0., 0.))]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "Z = np.zeros(10, [ ('position', [ ('x', float),\n",
+    "                                  ('y', float)]),\n",
+    "                   ('color',    [ ('r', float),\n",
+    "                                  ('g', float),\n",
+    "                                  ('b', float)])])\n",
+    "print(Z)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fec85809",
+   "metadata": {},
+   "source": [
+    "# 55. How to convert a float (32 bits) array into an integer (32 bits) in place?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1aa0a390",
+   "metadata": {},
+   "source": [
+    "numpy.astype()  - Copy of the array, cast to a specified type."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "b45a56ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Float form of array is : \n",
+      " [0. 1. 2. 3. 4. 5. 6. 7. 8. 9.]\n",
+      "\n",
+      "Float array after convert in integer data type : \n",
+      " [0 1 2 3 4 5 6 7 8 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "#Creating array of float data type\n",
+    "X = np.arange(10, dtype=np.float32)\n",
+    "print(\"Float form of array is : \\n\", X)\n",
+    "X = X.astype(np.int32, copy=False)\n",
+    "print(\"\\nFloat array after convert in integer data type : \\n\", X)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb0731a4",
+   "metadata": {},
+   "source": [
+    "# 56. What is the equivalent of enumerate for numpy arrays?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed2c617b",
+   "metadata": {},
+   "source": [
+    "ndenumerate() - This method returns an iterator yielding pairs of array coordinates and values."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21077b74",
+   "metadata": {},
+   "source": [
+    "- We require corresponding index of the element while iterating, the ndenumerate() method can be used for those usecases."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "056b861c",
+   "metadata": {},
+   "source": [
+    "numpy.ndindex() - An N-dimensional iterator object to index arrays.\n",
+    "\n",
+    "- Given the shape of an array, an ndindex instance iterates over the N-dimensional index of the array. At each iteration a tuple of indices is returned, the last dimension is iterated over first"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "881e6359",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Our array is : \n",
+      " [[0 1 2]\n",
+      " [3 4 5]\n",
+      " [6 7 8]]\n",
+      "(0, 0) 0\n",
+      "(0, 1) 1\n",
+      "(0, 2) 2\n",
+      "(1, 0) 3\n",
+      "(1, 1) 4\n",
+      "(1, 2) 5\n",
+      "(2, 0) 6\n",
+      "(2, 1) 7\n",
+      "(2, 2) 8\n",
+      "(0, 0) 0\n",
+      "(0, 1) 1\n",
+      "(0, 2) 2\n",
+      "(1, 0) 3\n",
+      "(1, 1) 4\n",
+      "(1, 2) 5\n",
+      "(2, 0) 6\n",
+      "(2, 1) 7\n",
+      "(2, 2) 8\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "#Creating array\n",
+    "x = np.arange(9).reshape(3,3)\n",
+    "print(\"Our array is : \\n\", x)\n",
+    "\n",
+    "for index, value in np.ndenumerate(x):\n",
+    "    print(index, value)\n",
+    "for index in np.ndindex(x.shape):\n",
+    "    print(index, x[index])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c49f4083",
+   "metadata": {},
+   "source": [
+    "# 57. How to read the following file?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd74463c",
+   "metadata": {},
+   "source": [
+    "- numpy.genfromtxt( ) – Used to load data from a text file, with missing values handled as defined."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "25744076",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data from the given file is : \n",
+      " [[ 1  2]\n",
+      " [ 3  4]\n",
+      " [ 5  6]\n",
+      " [ 7  8]\n",
+      " [ 9 10]]\n",
+      "\n",
+      "Data after converting from given file is : \n",
+      " [['1' '2']\n",
+      " ['3' '4']\n",
+      " ['5' '6']\n",
+      " ['7' '8']\n",
+      " ['9' '10']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "# File content:\n",
+    "# -------------\n",
+    "1, 2, 3, 4, 5,\n",
+    "6, 7, 8, 9, 10\n",
+    "#---------\n",
+    "\n",
+    "X = np.genfromtxt(\"missing.txt\", delimiter=\",\")\n",
+    "\n",
+    "File_data = np.loadtxt(\"missing.txt\", dtype=int)\n",
+    "print(\"Data from the given file is : \\n\", File_data)\n",
+    "\n",
+    "# converting file data to string\n",
+    "data = np.loadtxt(\"missing.txt\",  dtype='str')\n",
+    "print(\"\\nData after converting from given file is : \\n\", data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c409b2c",
+   "metadata": {},
+   "source": [
+    "# 58. How to randomly place p elements in a 2D array?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8733b443",
+   "metadata": {},
+   "source": [
+    "-  numpy.put() -  function replaces specific elements of an array with given values of p_array. \n",
+    "- Array indexed works on flattened array. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "244205aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Created array is : \n",
+      " [[0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0.]]\n",
+      "\n",
+      "Array after replacing : \n",
+      " [[0. 0. 0. 0. 0.]\n",
+      " [0. 1. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 1. 0.]\n",
+      " [0. 1. 0. 0. 0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "#assign value to the variable\n",
+    "n = 5\n",
+    "p = 3\n",
+    "\n",
+    "#Creating array with zeros\n",
+    "Z = np.zeros((n,n))\n",
+    "print(\"Created array is : \\n\", Z)\n",
+    "\n",
+    "#Replacing place element in array using put() function\n",
+    "np.put(Z, np.random.choice(range(n*n), p, replace=False),1)\n",
+    "print(\"\\nArray after replacing : \\n\", Z)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "846aeaaa",
+   "metadata": {},
+   "source": [
+    "# 59. Subtract the mean of each row of a matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "8e675267",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.25805237 -0.54042395 -0.54641304  0.31318805  0.04720989 -0.04903687\n",
+      "   0.02645079  0.32445421  0.28476224 -0.11824368]\n",
+      " [ 0.0984623   0.21679367  0.41649586 -0.31234929 -0.33381365 -0.16206879\n",
+      "  -0.34119206  0.29129062  0.10673069  0.01965066]\n",
+      " [ 0.01852933 -0.23251474 -0.08752518  0.11706774 -0.16897284  0.58580968\n",
+      "  -0.31496337  0.19728803 -0.09548127 -0.01923738]\n",
+      " [-0.35665603  0.35370496 -0.34519084  0.13100669  0.24484947 -0.00169402\n",
+      "   0.1265601  -0.39203443  0.06834582  0.17110826]\n",
+      " [ 0.19589559 -0.32116675 -0.06829445  0.25154508 -0.16266228 -0.51515986\n",
+      "   0.15881608  0.45762102  0.02460308 -0.0211975 ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "X = np.random.rand(5, 10)\n",
+    "# Recent versions of numpy\n",
+    "Y = X - X.mean(axis=1, keepdims=True)\n",
+    "print(Y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "130d0354",
+   "metadata": {},
+   "source": [
+    "# 60. How to I sort an array by the nth column?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc0e0ae7",
+   "metadata": {},
+   "source": [
+    "- numpy.argsort() - function is used to perform an indirect sort along the given axis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4af047cd",
+   "metadata": {},
+   "source": [
+    "-  It returns an array of indices of the same shape as arr that would sort the array."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "52c605a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Randomly created array \n",
+      " [[8 0 6]\n",
+      " [8 7 3]\n",
+      " [9 6 8]]\n",
+      "Array after sorting :\n",
+      " [[8 0 6]\n",
+      " [9 6 8]\n",
+      " [8 7 3]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "Z = np.random.randint(0,10,(3,3))\n",
+    "print(\"Randomly created array \\n\", Z)\n",
+    "print(\"Array after sorting :\\n\", Z[Z[:,1].argsort()])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "00d5d8f5",
+   "metadata": {},
+   "source": [
+    "# 61. Find the nearest value from a given value in an array"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a681ab2",
+   "metadata": {},
+   "source": [
+    "- numpy.ndarray.flat() - function is used as a 1_D iterator over N-dimensional arrays"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e2899d58",
+   "metadata": {},
+   "source": [
+    "- numpy.abs() : This mathematical function helps user to calculate absolute value of each element."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a26c0508",
+   "metadata": {},
+   "source": [
+    "- numpy.argmin() - method returns indices of the min element of the array in a particular axis. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "6949fc13",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nearest value of given array is : 0.02799479359059498\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "X = np.random.uniform(0,1,10)\n",
+    "x = 0.5\n",
+    "m = Z.flat[np.abs(X - x).argmin()]\n",
+    "print(\"Nearest value of given array is :\", m)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e4f64bf5",
+   "metadata": {},
+   "source": [
+    "# 62. Create an array class that has a name attribute"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "9fa410b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "range_10\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "class NamedArray(np.ndarray):\n",
+    "    def __new__(cls, array, name=\"no name\"):\n",
+    "        obj = np.asarray(array).view(cls)\n",
+    "        obj.name = name\n",
+    "        return obj\n",
+    "    def __array_finalize__(self, obj):\n",
+    "        if obj is None: return\n",
+    "        self.info = getattr(obj, 'name', \"no name\")\n",
+    "Z = NamedArray(np.arange(10), \"range_10\")\n",
+    "print (Z.name)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6bfaafa",
+   "id": "1afdd007",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Explain above code in detail"
+   ]
   }
  ],
  "metadata": {
