--- a/Numpy_100exercises.ipynb
+++ b/Numpy_100exercises.ipynb
@@ -3071,32 +3071,122 @@
    ],
    "source": [
     "import numpy as np\n",
+    "\n",
     "class NamedArray(np.ndarray):\n",
     "    def __new__(cls, array, name=\"no name\"):\n",
     "        obj = np.asarray(array).view(cls)\n",
     "        obj.name = name\n",
     "        return obj\n",
+    "    \n",
     "    def __array_finalize__(self, obj):\n",
     "        if obj is None: return\n",
     "        self.info = getattr(obj, 'name', \"no name\")\n",
+    "        \n",
     "Z = NamedArray(np.arange(10), \"range_10\")\n",
     "print (Z.name)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "84f97330",
+   "metadata": {},
+   "source": [
+    "# 63. Generate a generic 2D Gaussian­like array"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "144a8b9b",
+   "metadata": {},
+   "source": [
+    "- Gaussian - \n",
+    "- The Gaussian distribution is a continuous function which approximates the exact binomial distribution of events."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ba8c3e8",
+   "metadata": {},
+   "source": [
+    "- numpy.meshgrid() - It is used to create a rectangular grid out of two given one-dimensional arrays representing the Cartesian indexing or Matrix indexing."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "afbb4db0",
+   "metadata": {},
+   "source": [
+    "- numpy.linspace()– returns number spaces evenly w.r.t interval."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "def01f4d",
+   "metadata": {},
+   "source": [
+    "- numpy.exp() - This mathematical function helps user to calculate exponential of all the elements in the input array."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "892652a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Gaussian array is : \n",
+      " [[0.36787944 0.44822088 0.51979489 0.57375342 0.60279818 0.60279818\n",
+      "  0.57375342 0.51979489 0.44822088 0.36787944]\n",
+      " [0.44822088 0.54610814 0.63331324 0.69905581 0.73444367 0.73444367\n",
+      "  0.69905581 0.63331324 0.54610814 0.44822088]\n",
+      " [0.51979489 0.63331324 0.73444367 0.81068432 0.85172308 0.85172308\n",
+      "  0.81068432 0.73444367 0.63331324 0.51979489]\n",
+      " [0.57375342 0.69905581 0.81068432 0.89483932 0.9401382  0.9401382\n",
+      "  0.89483932 0.81068432 0.69905581 0.57375342]\n",
+      " [0.60279818 0.73444367 0.85172308 0.9401382  0.98773022 0.98773022\n",
+      "  0.9401382  0.85172308 0.73444367 0.60279818]\n",
+      " [0.60279818 0.73444367 0.85172308 0.9401382  0.98773022 0.98773022\n",
+      "  0.9401382  0.85172308 0.73444367 0.60279818]\n",
+      " [0.57375342 0.69905581 0.81068432 0.89483932 0.9401382  0.9401382\n",
+      "  0.89483932 0.81068432 0.69905581 0.57375342]\n",
+      " [0.51979489 0.63331324 0.73444367 0.81068432 0.85172308 0.85172308\n",
+      "  0.81068432 0.73444367 0.63331324 0.51979489]\n",
+      " [0.44822088 0.54610814 0.63331324 0.69905581 0.73444367 0.73444367\n",
+      "  0.69905581 0.63331324 0.54610814 0.44822088]\n",
+      " [0.36787944 0.44822088 0.51979489 0.57375342 0.60279818 0.60279818\n",
+      "  0.57375342 0.51979489 0.44822088 0.36787944]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "X, Y = np.meshgrid(np.linspace(-1,1,10), np.linspace(-1,1,10))\n",
+    "#Taking square root of matrix\n",
+    "D = np.sqrt(X*X+Y*Y)\n",
+    "\n",
+    "#initialize value to sigma and mu\n",
+    "sigma, mu = 1.0, 0.0\n",
+    "\n",
+    "#Generate Gaussian like array\n",
+    "G = np.exp(-( (D-mu)**2 / ( 2.0 * sigma**2 ) ) )\n",
+    "print(\"The Gaussian array is : \\n\", G)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1afdd007",
+   "id": "87215435",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#Explain above code in detail"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -3110,7 +3200,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.7 (tags/v3.10.7:6cc6b13, Sep  5 2022, 14:08:36) [MSC v.1933 64 bit (AMD64)]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "fbc768028c3e6ead51d9a200ddcb2ec858ae62844dcd1994729a8279be9b48f2"
+   }
   }
  },
  "nbformat": 4,
