--- a/Numpy_100exercises.ipynb
+++ b/Numpy_100exercises.ipynb
@@ -3176,17 +3176,103 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "87215435",
+   "cell_type": "markdown",
+   "id": "146d5873",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# 64. Considering a four dimensions array, how to get sum over the last two axis at once?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "60c1037c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[57 61 39 60]\n",
+      " [64 36 51 56]\n",
+      " [51 74 49 37]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "#Creating random array of 4 dimention\n",
+    "A = np.random.randint(0,10,(3,4,3,4))\n",
+    "#Calculating sum according to shape of array\n",
+    "sum = A.reshape(A.shape[:-2] + (-1,)).sum(axis=-1)\n",
+    "print(sum)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d40781ec",
+   "metadata": {},
+   "source": [
+    "# 65. How to get the diagonal of a dot product?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b1c5c052",
+   "metadata": {},
+   "source": [
+    "- numpy.einsum() -  It will return the Einstein’s summation convention."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "b6718ffe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 6  1 12 10]\n",
+      " [14  4  2  7]\n",
+      " [ 2  7  6 13]\n",
+      " [ 7  6  2  9]]\n",
+      "[[1 7 5 8]\n",
+      " [2 0 6 6]\n",
+      " [3 8 4 0]\n",
+      " [8 8 9 6]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([124, 170, 193, 146])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "A = np.random.randint(0,15,(4,4))\n",
+    "print(A)\n",
+    "B = np.random.randint(0,10,(4,4))\n",
+    "print(B)\n",
+    "# Slow version\n",
+    "np.diag(np.dot(A, B))\n",
+    "# Fast version\n",
+    "np.sum(A * B.T, axis=1)\n",
+    "# Faster version\n",
+    "np.einsum(\"ij,ji->i\", A, B)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
