--- a/Numpy_100exercises.ipynb
+++ b/Numpy_100exercises.ipynb
@@ -3226,7 +3226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "b6718ffe",
    "metadata": {},
    "outputs": [
@@ -3234,23 +3234,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 6  1 12 10]\n",
-      " [14  4  2  7]\n",
-      " [ 2  7  6 13]\n",
-      " [ 7  6  2  9]]\n",
-      "[[1 7 5 8]\n",
-      " [2 0 6 6]\n",
-      " [3 8 4 0]\n",
-      " [8 8 9 6]]\n"
+      "[[ 3  5  9  2]\n",
+      " [ 2  0 13 10]\n",
+      " [13 12  4  0]\n",
+      " [ 3  4 10 14]]\n",
+      "[[9 3 8 3]\n",
+      " [5 1 3 3]\n",
+      " [1 3 2 3]\n",
+      " [8 7 1 7]]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([124, 170, 193, 146])"
+       "array([ 77, 115, 148, 149])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3267,6 +3267,178 @@
     "np.sum(A * B.T, axis=1)\n",
     "# Faster version\n",
     "np.einsum(\"ij,ji->i\", A, B)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc3c9e74",
+   "metadata": {},
+   "source": [
+    "# 66. Consider a given vector, how to add 1 to each element indexed by a second vector (be careful with repeated indices)?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "754119d8",
+   "metadata": {},
+   "source": [
+    "- np.bincount() - method counts the occurrence of each element.\n",
+    "- Each bin value is the occurrence of its index\n",
+    "- min_len : Minimum number of bins we want in the output array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "0d8819d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3. 1. 5. 2. 3. 3. 1. 4. 2. 6.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Creating array with ones\n",
+    "X= np.ones(10)\n",
+    "arr = np.random.randint(0,len(X),20)\n",
+    "X += np.bincount(arr, minlength=len(X))\n",
+    "print(X)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "25567e84",
+   "metadata": {},
+   "source": [
+    "# 67. How to accumulate elements of a vector (X) to an array (F) based on an index list (I)?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "bbe24626",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 7. 0. 6. 5. 0. 0. 0. 0. 3.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "X = [1,2,3,4,5,6]\n",
+    "I = [1,3,9,3,4,1]\n",
+    "F = np.bincount(I,X)\n",
+    "print(F)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65cd88ed",
+   "metadata": {},
+   "source": [
+    "# 68. Considering a one­dimensional vector D, how to compute means of subsets of D using a vector S of same size describing subset indices?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "4442ec44",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean of subset D is : [0.60338592 0.65158209 0.47519977 0.51546076 0.45721627 0.54534986\n",
+      " 0.41344356 0.44395449 0.54534941 0.54129509]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Creating two array using uniform and random method\n",
+    "D = np.random.uniform(0,1,100)\n",
+    "S = np.random.randint(0,10,100)\n",
+    "\n",
+    "#calculate count of array\n",
+    "D_sums = np.bincount(S, weights=D)\n",
+    "D_counts = np.bincount(S)\n",
+    "\n",
+    "#Calculate mean of an array\n",
+    "D_means = D_sums / D_counts\n",
+    "\n",
+    "print(\"Mean of subset D is :\", D_means)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e5d0c8e8",
+   "metadata": {},
+   "source": [
+    "# 69. Given an array C that is a bincount, how to produce an array A such that np.bincount(A) == C?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3dcc0e0b",
+   "metadata": {},
+   "source": [
+    "The numpy.repeat() - function repeats elements of the array – arr."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "4e0454ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 1 2 3 4 4 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "C = np.bincount([1,1,2,3,4,4,6])\n",
+    "A = np.repeat(np.arange(len(C)), C)\n",
+    "print(A)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e60689aa",
+   "metadata": {},
+   "source": [
+    "# 70. How to find the most frequent value in an array?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "61a8cf63",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "Z = np.random.randint(0,10,50)\n",
+    "print(np.bincount(Z).argmax())"
    ]
   }
  ],
