Added next exercise

--- a/Numpy_100exercises.ipynb
+++ b/Numpy_100exercises.ipynb
@@ -3440,6 +3440,146 @@
     "Z = np.random.randint(0,10,50)\n",
     "print(np.bincount(Z).argmax())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8298e54b",
+   "metadata": {},
+   "source": [
+    "# 71. Considering a (w,h,3) image of (dtype=ubyte), compute the number of unique colors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "16ec4f1d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "#Width and height of the image\n",
+    "w,h = 16,16\n",
+    "#getting random integer within range of image with specified type\n",
+    "I = np.random.randint(0,2,(h,w,3)).astype(np.ubyte)\n",
+    "F = I[...,0]*256*256 + I[...,1]*256 +I[...,2]\n",
+    "n = len(np.unique(F))\n",
+    "print(np.unique(I))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d82c472f",
+   "metadata": {},
+   "source": [
+    "# 72. Consider the vector [1, 2, 3, 4, 5], how to build a new vector with 3 consecutive zeros interleaved between each value?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "4f046181",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Our vector is :  [1 2 3 4 5]\n",
+      "[1. 0. 0. 0. 2. 0. 0. 0. 3. 0. 0. 0. 4. 0. 0. 0. 5.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "X = np.array([1,2,3,4,5])\n",
+    "print(\"Our vector is : \", X)\n",
+    "nz = 3\n",
+    "Z = np.zeros(len(X) + (len(X)-1)*(nz))\n",
+    "#Getting indexing wise element\n",
+    "Z[::nz+1] = X\n",
+    "print(Z)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca01e639",
+   "metadata": {},
+   "source": [
+    "# 73. Consider a set of 10 triplets describing 10 triangles (with shared vertices), find the set of unique line segments composing all the triangles"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ecd11236",
+   "metadata": {},
+   "source": [
+    "- np.roll() - function rolls array elements along the specified axis. \n",
+    "- If an element is being rolled first to the last position, it is rolled back to the first position. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bbcf2d5f",
+   "metadata": {},
+   "source": [
+    "- np.view() - helps to get a new view of array with the same data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "44ecb02e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vertices of tringle is  : \n",
+      " [[91 63 48]\n",
+      " [68 61  5]\n",
+      " [18 20 23]\n",
+      " [64 68 27]\n",
+      " [61  3 42]\n",
+      " [33 83 61]\n",
+      " [62 26 99]\n",
+      " [11 38 20]\n",
+      " [43 76 51]\n",
+      " [77 58 16]]\n",
+      "\n",
+      "Set of unique line segments is  : \n",
+      " [( 3, 42) ( 3, 61) ( 5, 61) ( 5, 68) (11, 20) (11, 38) (16, 58) (16, 77)\n",
+      " (18, 20) (18, 23) (20, 23) (20, 38) (26, 62) (26, 99) (27, 64) (27, 68)\n",
+      " (33, 61) (33, 83) (42, 61) (43, 51) (43, 76) (48, 63) (48, 91) (51, 76)\n",
+      " (58, 77) (61, 68) (61, 83) (62, 99) (63, 91) (64, 68)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "#Getting random integer value within given range\n",
+    "faces = np.random.randint(0,100,(10,3))\n",
+    "print(\"Vertices of tringle is  : \\n\", faces)\n",
+    "\n",
+    "#rolling array elements along axis\n",
+    "F = np.roll(faces.repeat(2,axis=1),-1,axis=1)\n",
+    "#reshape array elements\n",
+    "F = F.reshape(len(F)*3,2)\n",
+    "#perform sorting operation\n",
+    "F = np.sort(F,axis=1)\n",
+    "G = F.view( dtype=[('p0',F.dtype),('p1',F.dtype)] )\n",
+    "#Getting set of unique value\n",
+    "G = np.unique(G)\n",
+    "print(\"\\nSet of unique line segments is  : \\n\", G)"
+   ]
   }
  ],
  "metadata": {
