--- a/Numpy_100exercises.ipynb
+++ b/Numpy_100exercises.ipynb
@@ -4396,6 +4396,74 @@
     "                                       np.arange(0, Z.shape[1], k), axis=1)\n",
     "print(S)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ddb50d6",
+   "metadata": {},
+   "source": [
+    "# 87. Given a two dimensional array, how to extract unique rows? "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "d20b37da",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 0 1]\n",
+      " [0 1 1]\n",
+      " [1 0 0]\n",
+      " [1 0 1]\n",
+      " [1 1 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "Z = np.random.randint(0,2,(6,3))\n",
+    "T = np.ascontiguousarray(Z).view(np.dtype((np.void, Z.dtype.itemsize * Z.shape[1])))\n",
+    "_, idx = np.unique(T, return_index=True)\n",
+    "uZ = Z[idx]\n",
+    "print(uZ)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb5ec662",
+   "metadata": {},
+   "source": [
+    "# 88. Given an integer n and a 2D array X, select from X the rows which can be interpreted as draws from a multinomial distribution with n degrees, i.e., the rows which only contain integers and which sum to n."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "e8a06efb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2. 0. 1. 1.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "X = np.asarray([[1.0, 0.0, 3.0, 8.0],\n",
+    "[2.0, 0.0, 1.0, 1.0],\n",
+    "[1.5, 2.5, 1.0, 0.0]])\n",
+    "n = 4\n",
+    "M = np.logical_and.reduce(np.mod(X, 1) == 0, axis=-1)\n",
+    "M &= (X.sum(axis=-1) == n)\n",
+    "print(X[M])"
+   ]
   }
  ],
  "metadata": {
